--- a/Lessons_code/PYTHON-6. Методы группировки данных.ipynb
+++ b/Lessons_code/PYTHON-6. Методы группировки данных.ipynb
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -2639,13 +2639,268 @@
        "Name: Dribbling, Length: 650, dtype: float64"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby(['Club'])['Dribbling'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12153.846153846154"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Посчитайте среднюю (mean) и медианную (median) зарплату (Wage) футболистов из разных клубов (Club). \n",
+    "# В скольких клубах средняя и медианная зарплаты совпадают?\n",
+    "stat = df.groupby(['Club'])['Wage'].agg(['mean', 'median'])\n",
+    "# display(stat)\n",
+    "display(stat.loc['Ajax']['mean'])\n",
+    "#.loc['mean'][0]\n",
+    "count_eq = 0 \n",
+    "len(stat)\n",
+    "for index,line in stat.iterrows():\n",
+    "     if line['mean'] == line['median']:\n",
+    "            count_eq += 1\n",
+    "#             print(line)\n",
+    "print(count_eq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cruzeiro</th>\n",
+       "      <td>13000.0</td>\n",
+       "      <td>13000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mean   median\n",
+       "Cruzeiro  13000.0  13000.0"
+      ]
+     },
+     "execution_count": 414,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Продолжаем работать с клубами, в которых средняя зарплата совпадает с медианной. \n",
+    "# Каков максимальный размер средней зарплаты в этой группе клубов?\n",
+    "# Как называется клуб, где игроки получают такую зарплату?\n",
+    "\n",
+    "# Создаём новый dataframe только с клубами, где равны средняя зарплата и медиана зарпаты\n",
+    "rows = []\n",
+    "index = []\n",
+    "columns = ['mean','median']\n",
+    "for key,line in stat.iterrows():\n",
+    "     if line['mean'] == line['median']:\n",
+    "            rows.append([line['mean'], line['median']])\n",
+    "            index.append(key)\n",
+    "            count_eq += 1\n",
+    "new_df = pd.DataFrame(rows, index=index, columns=columns)\n",
+    "\n",
+    "# Максимальный размер средней зарплаты\n",
+    "new_df[new_df['mean'] == new_df['mean'].max()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wage    2035000\n",
+       "Name: Chelsea, dtype: int64"
+      ]
+     },
+     "execution_count": 432,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# С помощью функции groupby посчитайте сумму зарплат (Wage) футболистов клуба (Club) \"Chelsea\".\n",
+    "df.groupby(['Club'])[['Wage']].sum().loc['Chelsea']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54000"
+      ]
+     },
+     "execution_count": 434,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Определите максимальную зарплату футболиста национальности (Nationality) Аргентина (\"Argentina\") в возрасте 20 лет.\n",
+    "df[(df['Nationality'] == 'Argentina') & (df['Age'] == 20)].Wage.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300000"
+      ]
+     },
+     "execution_count": 435,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Определите максимальную зарплату футболиста национальности (Nationality) Аргентина (\"Argentina\") в возрасте 30 лет.\n",
+    "df[(df['Nationality'] == 'Argentina') & (df['Age'] == 30)].Wage.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Определите минимальную зарплату футболиста национальности (Nationality) Аргентина (\"Argentina\") в возрасте 30 лет.\n",
+    "df[(df['Nationality'] == 'Argentina') & (df['Age'] == 30)].Wage.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Strength</th>\n",
+       "      <th>Balance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Strength  Balance\n",
+       "0        59       95"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Определите максимальную силу (Strength) и баланс (Balance) среди игроков клуба (Club) \"FC Barcelona\" \n",
+    "# из Аргентины (\"Argentina\"). Ответ введите через точку с запятой без пробела.\n",
+    "df[(df['Nationality'] == 'Argentina') & (df['Club'] == 'FC Barcelona')][['Strength', 'Balance']]"
    ]
   }
  ],
